frontend/test/should_pass/edge_014.grg
using edge_model_005;
