frontend/test/should_fail/constr_003.grg
using constr_model_003;
